--- a/index.html
+++ b/index.html
@@ -193,6 +193,25 @@
             opacity: 1;
         }
 
+        /* --- 비디오 섹션 --- */
+        .video-wrapper {
+            width: 100%;
+            max-width: 1000px;
+            aspect-ratio: 16 / 9;
+            background: #000;
+            border: 2px solid #333;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+        }
+
+        .video-wrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
         /* --- 5. 채팅 모달 --- */
         .chat-modal {
             display: none;
@@ -359,6 +378,13 @@
                     <p>네오서울 뒷골목의 천재 의사. 당신의 친구.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="cinema">
+        <h2 class="gallery-title animate-scroll">AI VIDEO</h2>
+        <div class="video-wrapper animate-scroll hover-target">
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/Vfe2DdROTzs" title="이미지 프로덕션 과제-장효석" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
