--- a/public/index.html
+++ b/public/index.html
@@ -577,7 +577,7 @@
                 const response = await fetch('/api/chat', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ model: 'gpt-3.5-turbo', messages: messagesForApi, character: currentCharacterKey })
+                    body: JSON.stringify({ messages: messagesForApi, character: currentCharacterKey })
                 });
 
                 // handle response robustly
