--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEURAL DREAMSCAPE | AI Portfolio</title>
+    <title>AI DREAMING | AI Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Noto+Sans+KR:wght@300;500;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -347,7 +347,7 @@
     <canvas id="bg-canvas"></canvas>
 
     <section class="hero">
-        <h1 class="animate-text">NEURAL<br>DREAMSCAPE</h1>
+        <h1 class="animate-text">AI<br>DREAMING</h1>
         <p class="animate-text">AI로 빚어낸 무한한 상상력</p>
         <p class="animate-text">장효석</p>
         <div class="scroll-indicator">SCROLL DOWN</div>
@@ -361,7 +361,7 @@
                 <img src="img/3a.png" alt="여검사 모용화린">
                 <div class="card-info">
                     <h3>여검사 모용화린</h3>
-                    <p>모용세가의 고명딸. 냉정한 검제이자 당신의 스승.</p>
+                    <p>모용세가의 고명딸이자 현 무림맹 부맹주. 냉정한 검제이자 당신의 스승.</p>
                 </div>
             </div>
             <div class="card animate-scroll hover-target" data-character="horn">
