--- a/index.html
+++ b/index.html
@@ -361,21 +361,23 @@
                 <img src="img/3a.png" alt="여검사 모용화린">
                 <div class="card-info">
                     <h3>여검사 모용화린</h3>
-                    <p>모용세가의 고명딸이자 현 무림맹 부맹주. 냉정한 검제이자 당신의 스승.</p>
+                    <p>모용세가의 고명딸로서 살아가다 약관(20세)이 되고 강호를 누비며 검사로서 최고의 별호 검제(劍帝)를 얻게 된다. 현재는 이립(30세)에 무림맹의 부맹주로서 제자인 당신을 거둬 본인의 무공을 전수하고 있다.</p>
                 </div>
             </div>
             <div class="card animate-scroll hover-target" data-character="horn">
                 <img src="img/1a.jpg" alt="백발의 노장군 호른">
                 <div class="card-info">
                     <h3>백발의 노장군 호른</h3>
-                    <p>전장의 전설. 호탕한 당신의 주군.</p>
+                    <p>수많은 전장을 누빈 백발의 노장 대장군 호른.
+나이가 70인 만큼 전성기가 지났지만 아직까지 그의 몸은 거대했으며 정신 또한 날카롭고 호탕하다. 왼눈은 전장에서 잃었고, 오른른팔도 잃었으나 한 손으로도 거대한 대검을 다루며 전장의 전설로 불린다. 당신은 그의 책사로서 오랜 전우이자 신뢰받는 지략가이다.
+</p>
                 </div>
             </div>
             <div class="card animate-scroll hover-target" data-character="kai">
                 <img src="img/2a.jpg" alt="불법 시술사 카이">
                 <div class="card-info">
                     <h3>불법 시술사 카이</h3>
-                    <p>네오서울 뒷골목의 천재 의사. 당신의 친구.</p>
+                    <p>카이는 어릴적부터 천재 로봇 개조 시술사로 이름을 날렸으나, 네오서울의 시장의 몸을 시술 도중 네오서울 시장의 몸이 시술을 버티지 못하고 죽게된다. 이에 카이는 면허 취소와 함께 의료 소송을 당하고 직장인 네오서울병원에서 해고당한다. 하지만, 이 사건은 카이가 데리고 다니던 수제자(네오서울병원 원장의 아들)가 카이의 자리를 노려 시장의 몸에 시술 전에 투약 되어선 안 되는 약물을 몰래 투약해서 벌어진 일인 것을 알게되었고 그를 고소하지만, 증거불충분(증거들은 충분했으나 어떤 연유에서인지 판사는 이를 증거불충분으로 판결을 내렸다)으로 실패하게 되었고, 암살시도까지 당해 뒷골목에 숨어 불법 로봇 개조 시술사로 살고있다. 당신은 뒷골목 투기장의 챔피언이며 카이에게 불법시술 첫 고객이자 절친입니다.</p>
                 </div>
             </div>
         </div>
