--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     </section>
 
     <section class="contact">
-        <h2 class="animate-scroll" style="font-size: 3rem; margin-bottom: 2rem;">CONTACT <span style="color: var(--secondary-color);">NEXUS</span></h2>
+        <h2 class="animate-scroll" style="font-size: 3rem; margin-bottom: 2rem;">CONTACT <span style="color: var(--secondary-color);"></span></h2>
         <form class="contact-form animate-scroll" id="contactForm">
             <input type="text" name="name" placeholder="YOUR NAME" required>
             <input type="email" name="email" placeholder="YOUR EMAIL" required>
