--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
     <section class="hero">
         <h1 class="animate-text">AI<br>DREAMING</h1>
-        <p class="animate-text">AI로 빚어낸 무한한 상상력</p>
+        <p class="animate-text">AI로 꿈을 이뤄내다</p>
         <p class="animate-text">장효석</p>
         <div class="scroll-indicator">SCROLL DOWN</div>
     </section>
